syntax = "proto3";

package cortex.agent.v1;

option go_package = "github.com/cortex-agent-protocol/go/gen/cortex/agent/v1";
option java_package = "ai.cortex.cap.agent.v1";
option java_multiple_files = true;
option csharp_namespace = "Cortex.Agent.V1";
option php_namespace = "Cortex\\Agent\\V1";
option ruby_package = "Cortex::Agent::V1";

import "google/protobuf/timestamp.proto";
import "cortex/agent/v1/job.proto";
import "cortex/agent/v1/heartbeat.proto";
import "cortex/agent/v1/alert.proto";

// BusPacket is the envelope for all traffic on the bus.
message BusPacket {
    string trace_id = 1;                    // correlates related packets
    string sender_id = 2;                   // emitting agent id
    google.protobuf.Timestamp created_at = 3; // emission time
    int32 protocol_version = 4;             // CAP wire version

    oneof payload {
        JobRequest job_request = 10;
        JobResult job_result = 11;
        Heartbeat heartbeat = 12;
        SystemAlert alert = 13;
    }
}
